test/asm/interpolation-after-string.err
error: interpolation-after-string.asm(5):
    syntax error, unexpected symbol
while expanding symbol "greeting"
error: interpolation-after-string.asm(8):
    syntax error, unexpected string
while expanding symbol "string"
Assembly aborted with 2 errors!
