test/asm/interpolation-after-string.asm
def concat equs """++ "hi world" ++"""
println ""{concat}""

def greeting equs "hello"
println ""{greeting}

def string equs "\"goodbye\""
println ""{string}""
